src/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap");

:root {
  --color-primary-60: #023e7379;
  --bg-light: #F2F2F2;
  --bg-dark: #0B3762;
  --bg-dark-80: #0b3662e0;
  --color-text-bg-light: #342618; /* Usado en texto (p) de card-one y sombra de cta */
  --color-text-bg-dark: #FFFFFF;
  --color-contrast-bg-light: #0B4DA5;
  --color-contrast-bg-dark: #FFA438; /* No usado aún */
  --color-links-cta: #FFA438;
  --color-links-visited: #8197BA; /* No usado aún */
}

body {
  margin: auto 0;
  background: var(--bg-light);
}

header {
  height: 450px;
  margin-bottom: 150px;
  background: url("../assets/img/Fondo-estampado.png");
  background-size: contain;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  position:relative;
}
header>img{
  max-height: 450px;
  position:absolute;
  bottom: -75px;
  left: 100px;
}

.hero-container {
  width: 450px;
  padding: 25px;
  margin-right: 135px;
  background: var(--bg-dark-80);
  border-radius: 25px;
  text-align: center;
  color: var(--color-text-bg-dark);
  z-index: 1;
}

.title-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--color-text-bg-dark);
}

.title-text h1 {
  font-family: "Lobster two", cursive;
  font-style: italic;
}

.title-text p {
  font-family: "Be Vietnam Pro", sans-serif;
}

.title-text span {
  color: var(--color-contrast-bg-dark);
}

main {
  width: 90%;
  margin: 32px  auto;
}

.container-gallery-card {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.container-gallery-card .card-one {
  width: 300px;
  min-height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-one>img{
  height: 150px;
}

.card-one h2 {
  color: var(--color-contrast-bg-light);
  font-family: "Lobster two", cursive;
  text-align: center;
}

.card-one p {
  color: var(--color-text-bg-light);
  font-family: "Be Vietnam Pro", sans-serif;
  font-weight: bold;
  text-align: center;
}

.btn-cta {
  padding: 14px 36px;
  border: 3px solid var(--color-links-cta);
  border-radius: 15px;
  background-color: var(--color-links-cta);
  color: var(--bg-dark);
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 1.2em;
  font-weight: bold;
  text-align: center;
  cursor: pointer;
  box-shadow: 0 4px 8px 2px var(--bg-dark-80);
  transition: 800ms;
}

.btn-cta:hover {
  background-color: var(--bg-light);
  border-color: var(--color-contrast-bg-light);
  color: var(--color-contrast-bg-light);
}

.cta-custom-events {
  width: 80%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 1em auto;
  color: var(--bg-dark);
}

.cta-custom-events h4 {
  font-family: "Lobster two", cursive;
  font-size: 32px;
}

.cta-custom-events p {
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 24px;
}

.gallery-events {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gallery-events h3 {
  font-family: "Lobster two", cursive;
  font-size: 40px;
  color: var(--color-bg-light);
}

.gallery-events span {
  color: var(--color-contrast-bg-dark);
}

/* Estilos de las tarjetas de eventos */

.container-events {
  height: min-content;
  width: 95%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 18px;
  grid-row-gap: 18px;
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 18px;
}

.container-card {
  width: 90%;
  padding-bottom: 15em;
  margin: 2em auto;
  border-radius: 25px;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;

  box-shadow: 0px 10px 12px 4px #00000050;
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 16px;
}

.photoEvent {
  width: 100%;
  height: 340px;
  background-color: var(--bg-light);
  border-radius: 25px;
  left: 200px;
}

.photoEvent > img {
  width: 100%;
  height: 100%;

  object-fit: cover;
  border-radius: 25px;
}
.card {
  width: 100%;
  height: 280px;
  background: var(--bg-dark);
  border-radius: 0 0 25px 25px;

  display: flex;
  flex-direction: row;

  transition: 2s;

  position: absolute;
  bottom: 0;
  /*text-align: center;*/
  color: var(--color-text-bg-dark);
}

.info-card {
  display: flex;
  flex-direction: column;
  width: 75%;
  padding: 0px 15px;
}

.info-card > h4 {
  margin: 0;
  height: 50%;
  font-family: "Lobster two", cursive;
  font-size: 2em;
}

.info-card > p {
  margin: 0;

  font-size: 1.5em;
}

.date-card{
  width: 25%;
  color: var(--color-text-bg-light);
  background: var(--bg-light);
  border-radius: 0 0 25px 0;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  font-weight: bold;
  text-align: center;
}

hr {
  width: 75%;
  border: none;
  border-top: 1px solid var(--color-text-bg-light);
}

.icons-bar {
  width: 100%;
  background: var(--bg-light);
  border-radius: 15px;
  margin: 10px auto;

  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
}

figure {
  width: 50px;
  height: 50px;

  display: flex;
  align-items: center;
  margin: 0;
}

figure > img {
  width: 40px;
  height: 40px;

  margin-left: 10px;

}

/* Footer */
footer {
  width: 100%;
  min-height: 200px;
  background-color: var(--bg-dark);
  color: var(--bg-light);
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 18px;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.container-img {
  width: 80%;
  /*No le pongo variable porque depende de los logos*/
  background: #FFFFFF;
  border-radius: 15px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin: 0 auto;
  margin-bottom: 10px;
}

.container-img > img {
  max-height: 50px;
}
.hidden{
  display:none;
}
/* Responsive */


@media screen and (min-width: 427px) and (max-width: 1023px) {
  .container-events {
    grid-template-columns: 1fr 1fr;
  }
}



@media screen and (max-width: 768px) {
  body {
    margin: 0;
  }

  header {
    justify-content: center;
    height:max-content;
    margin-bottom: 50px;
  }

  header > img{
    display:none;
  }
  .hero-container {
    margin-right: 0;
    justify-content: center;
    width: fit-content;
  }

  .title-text {
    width: 300px;
    height: 280px;
    overflow: hidden;
  }

  .container-gallery-card {
    width: 80vw;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .gallery-events h3 {
    font-size: 28px;
    color: var(--bg-dark);
  }

  .container-events {
    grid-template-columns: 1fr;
  }

  .container-img {
    width: 300px;
  }
}

